[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nobu"
version = "0.1.0"
description = "Lightweight CLI port scanner for network reconnaissance and learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JaKuba23", email = "jakuba23@users.noreply.github.com"}
]
maintainers = [
    {name = "JaKuba23", email = "jakuba23@users.noreply.github.com"}
]
keywords = [
    "port-scanner",
    "network",
    "security",
    "reconnaissance",
    "cli",
    "cybersecurity",
    "pentesting",
    "networking",
    "nmap",
    "scanner",
    "tcp",
    "connect",
    "banner",
    "grabbing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
]

[project.scripts]
nobu = "nobu.cli:main"

[project.urls]
Homepage = "https://github.com/JaKuba23/nobu"
Repository = "https://github.com/JaKuba23/nobu"
Documentation = "https://github.com/JaKuba23/nobu#readme"
Issues = "https://github.com/JaKuba23/nobu/issues"

[tool.setuptools.packages.find]
include = ["nobu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "docker: marks tests that require Docker to be running (deselect with '-m \"not docker\"')"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["nobu"]
skip = [".venv", "build", "dist"]

[tool.coverage.run]
source = ["nobu"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

